Adding default blocks to blockly

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="js/blocks_compressed.js"></script>
   <script src="js/msg/js/en.js"></script>
   <script src="js/blocks/output.js"></script>
+  <script src="js/blocks/default_blocks.js"></script>
   <script src="js/xmlHelper.js"></script>
   <style>
     body {
@@ -33,6 +34,11 @@
       <block type="mathematical_proof_step3"></block>
       <block type="mathematical_proof_step4"></block>
       <block type="mathematical_proof_step5"></block>
+      <block type="proof_by_contradiction"></block>
+      <block type="proof_by_induction"></block>
+      <block type="proof_qed"></block>
+      <block type="proof_to_be_proven"></block>
+
     </category>
     <sep></sep>
   </xml>
